--- a/all.css
+++ b/all.css
@@ -30,6 +30,9 @@ tbody tr:nth-child(odd) {background-color: #f3eded;}
   border: none;
   font-weight: bold;
   padding: 10px 20px;
+  position: fixed;
+  right: 20px;
+  bottom: 40px;
 }
 [class^="btn"] {cursor: pointer;}
 .pull-left {float: left;}
